--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: cyzest
 
 # Short bio or description (displayed in the header)
-description: back-end web developer
+description: back-end developer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars0.githubusercontent.com/u/866184
