--- a/_config.yml
+++ b/_config.yml
@@ -19,14 +19,14 @@ avatar: https://avatars0.githubusercontent.com/u/866184
 footer-links:
   dribbble:
   email:
-  facebook:
+  facebook:cyzest
   flickr:
   github: cyzest
   instagram:
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: cyzest
+  twitter:
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
